@@ -323,6 +323,7 @@ enum AVCodecID {
     AV_CODEC_ID_PDV,
     AV_CODEC_ID_EVC,
     AV_CODEC_ID_RTV1,
+    AV_CODEC_ID_VMIX,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
